Extend nav hamburger breakpoint to 1100px to prevent wrapping

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1152,3 +1152,61 @@ span.quote {
 .main-content .mc-signup h2 {
     font-size: 1.25em;
 }
+
+// ---- RESPONSIVE NAV: extend hamburger to 1100px ----
+// Bootstrap 3 expands the nav at 768px, but 8 items need more room
+@media(max-width: 1100px) {
+    .navbar-toggle {
+        display: block !important;
+    }
+    .navbar-header {
+        float: none;
+    }
+    .navbar-collapse.collapse {
+        display: none !important;
+        height: auto !important;
+        overflow: visible !important;
+    }
+    .navbar-collapse.in,
+    .navbar-collapse.collapsing {
+        display: block !important;
+    }
+    .navbar-nav {
+        float: none !important;
+        margin: 0 !important;
+    }
+    .navbar-nav > li {
+        float: none !important;
+    }
+    ul.nav.navbar-nav.navbar-right li a {
+        padding: 10px 20px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+    .nav-wordmark {
+        display: none !important;
+    }
+    .nav-logo {
+        height: 52px;
+    }
+    body {
+        padding-top: 76px;
+    }
+}
+
+@media(min-width: 1101px) {
+    .navbar-toggle {
+        display: none !important;
+    }
+    .navbar-collapse.collapse {
+        display: block !important;
+        height: auto !important;
+        padding-bottom: 0;
+        overflow: visible !important;
+    }
+    .navbar-nav {
+        float: right !important;
+    }
+    .navbar-nav > li {
+        float: left !important;
+    }
+}
